add popup confirm order

--- a/public/css/nicepage.css
+++ b/public/css/nicepage.css
@@ -11837,7 +11837,7 @@ section.u-image:not(.u-hover-box),
 }
 .u-gutter-10 .u-layout .u-layout-cell {
   border: 1px solid rgb(109,49,168);
-  background-color: rgb(25,25,25);
+  background-color: rgb(26, 26, 26);
 }
 .u-gutter-10.u-layout-spacing-top {
   padding-top: 10px;
