fix bug popup confirm

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -192,8 +192,8 @@
       <span id="popup-confirm-title">Confirm your order</span>
       <div class="popup-confirm-info">
         <p id="txtFoodName" type="text" disabled placeholder="Food Name"></p>
-        <input id="txtFoodPrice" type="text" disabled placeholder="Price">
-        <input id="txtFoodDes" type="text" disabled placeholder="Description">
+        <p id="txtFoodPrice" type="text" disabled placeholder="Price"></p>
+        <p id="txtFoodDes" type="text" disabled placeholder="Description"></p>
       </div>
       <input id="txtFoodQty" type="number" name="qty" min="1" max="100" value="1">
       <input id="txtNote" type="text" placeholder="Note">
