--- a/views/room.ejs
+++ b/views/room.ejs
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet/less" type="text/css" href="./css/style.less" />
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    
+  
+    <script defer src="/script/socket.io.js"></script>
+    <script defer src="/script/toastr.min.js"></script>
+    <script defer src="/script/jquery.js"></script>
+    <script defer src="/script/script.js"></script>
+    <script defer src="/script/toastr.min.js"></script>
+
+    <script>
+      const roomName = "<%= roomName %>"
+    </script>
 
     <title>Group Order ShopeeFood</title>
 </head>
@@ -38,7 +47,10 @@
                               <div class="card-body-content">
                                 <h5 class="card-title"><%= food.title %></h5>
                               </div>
-                              <a onclick="showPopupConfirmOrder(this)" class="btn btn-primary mt-3"><%= food.price %></a>
+                              <a onclick="showPopupConfirmOrder(this)" class="btn btn-primary mt-3" 
+                                data-title="<%= food.title %>" data-price="<%= food.price %>" data-des="<%= food.des %>">
+                                <%= food.price %>
+                              </a>
                           </div>
                           <% }) %>
                         </div>
@@ -134,6 +146,24 @@
                   </div>
             </div>
         </div>
+    </div>
+
+    <!-- POPUP Confirm Order -->
+    <div class="modal-container">
+      <div class="popup-confirm" id="popup-confirm" style="display: none;">
+        <span id="popup-confirm-title">Confirm your order</span>
+        <div class="popup-confirm-info">
+          <p id="txtFoodName" type="text" disabled placeholder="Food Name"></p>
+          <p id="txtFoodPrice" type="text" disabled placeholder="Price"></p>
+          <p id="txtFoodDes" type="text" disabled placeholder="Description"></p>
+        </div>
+        <input id="txtFoodQty" type="number" name="qty" min="1" max="100" value="1">
+        <input id="txtNote" type="text" placeholder="Note">
+        <div class="popup-confirm-btn">
+          <button id="orderCloseBtn" onclick="closePopupConfirmOrder()">Close</button>
+          <button id="orderConfirmBtn" onclick="sendOrder()">Order</button>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/less" ></script>
