--- a/views/room.ejs
+++ b/views/room.ejs
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="tab-container col-lg-10">
+        <div class="tab-container">
             <div class="tab-wrapper">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
@@ -168,6 +168,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/less" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="./js/event.js" ></script>
 </body>
 </html>
